c7.4-kubeadm-calico-1-node-v1.10+/CD-userX-namespace/with-keystone/Namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: team1
  labels:
    ns.cclin: team1
spec:
  finalizers:
  - kubernetes

---

kind: Namespace
apiVersion: v1
metadata:
  name: team2
  labels:
    ns.cclin: team2
spec:
  finalizers:
  - kubernetes
