c7.4-kubeadm-calico-1-node-v1.10+/CD-userX-namespace/with-keystone/Keystone.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: os-keystone
  namespace: kube-system
  labels:
    app: os-keystone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: os-keystone
  template:
    metadata:
      labels:
        app: os-keystone
    spec:
      containers:
        - name: os-keystone
          image: stephenhsu/keystone:9.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
            - containerPort: 35357

---

kind: Service
apiVersion: v1
metadata:
  name: os-keystone
  namespace: kube-system
spec:
  selector:
    app: os-keystone
  ports:
    - protocol: TCP
      port: 35357
      targetPort: 35357
      nodePort: 31357
  type: NodePort
