c7.4-kubeadm-calico-1-node-v1.10+/CD-userX-namespace/with-keystone/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: k8s-keystone-auth-service
  namespace: kube-system
spec:
  selector:
    app: k8s-keystone-auth
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
      nodePort: 31443
  type: NodePort
