c7.4-kubeadm-calico-1-node-v1.10+/CD-userX-namespace/with-keystone/NetworkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: team-net-policy
  namespace: team1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns.cclin: team1

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: team-net-policy
  namespace: team2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns.cclin: team2
